...
            "value": "Mediathek"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
          }
        }
      }
    },
    "collections.trash": {
      "extractionState": "manual",
...
            "value": "Ausgewählte Objekte teilen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Share selected items"
          }
        }
      }
    },
    "selection.share_failed": {
      "extractionState": "manual",
...
            "value": "Ausgewählte Objekte in den Papierkorb verschieben"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Move selected items to Trash"
          }
        }
      }
    },
    "selection.trash_confirm": {
      "extractionState": "manual",
...
            "value": "Proton-Konto und Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Proton Account and Settings"
          }
        }
      }
    },
    "library.options": {
      "extractionState": "manual",
...
            "value": "Sammlungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Collections"
          }
        }
      }
    },
    "tab.map": {
      "extractionState": "manual",
...
            "value": "Karte"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Map"
          }
        }
      }
    },
    "tab.search": {
      "extractionState": "manual",
...
            "value": "Suchen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Search"
          }
        }
      }
    },
    "tab.settings": {
      "extractionState": "manual",
...
            "value": "Einstellungen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
          }
        }
      }
    },
    "viewer.close_a11y": {
      "extractionState": "manual",
...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        }
      }
    },
    "viewer.favorite_action": {
      "extractionState": "manual",
...
